- added album, artist, genre entities and migrations to create tables - refactoring in services