@@ -1,14 +1,11 @@
-package com.songify.domain.crud.song;
+package com.songify.domain.crud;
 
-import com.songify.domain.crud.song.dto.SongDto;
-import com.songify.infrastructure.crud.song.controller.dto.request.CreateSongRequestDto;
-import jakarta.validation.Valid;
+import com.songify.domain.crud.dto.SongDto;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -19,7 +16,7 @@ public class SongCrudFacade {
     private final SongDeleter songDeleter;
     private final SongUpdater songUpdater;
 
-    public List<SongDto> findAll(final Pageable pageable) {
+    public List<SongDto> findAll(Pageable pageable) {
         return songRetriever.findAll(pageable)
                 .stream()
                 .map(song -> SongDto.builder()
@@ -27,37 +24,20 @@ public class SongCrudFacade {
                         .name(song.getName())
                         .name(song.getName())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public SongDto findSongDtoById(final Long id) {
-        return songRetriever.findSongById(id);
-    }
-
-    public SongDto addSong(final SongDto songDto) {
-        String name = songDto.name();
-        Song validatedAndReadyToSaveSong = new Song(name);
-        Song addedSong = songAdder.addSong(validatedAndReadyToSaveSong);
-        return SongDto.builder()
-                .id(addedSong.getId())
-                .name(addedSong.getName())
-                .build();
-    }
-
-    public void deleteById(final Long id) {
+    public void updateById(Long id, SongDto newSongDto) {
         songRetriever.existsById(id);
-        songDeleter.deleteById(id);
-    }
-
-    public void updateById(final Long id, final SongDto newSongDto) {
-        songRetriever.existsById(id);
+        // some domain validator
         Song songValidatedAndReadyToUpdate = new Song(newSongDto.name());
+        // some domain validator ended checking
         songUpdater.updateById(id, songValidatedAndReadyToUpdate);
     }
 
-    public SongDto updatePartiallyById(final Long id, final SongDto songFromRequest) {
+    public SongDto updatePartiallyById(Long id, SongDto songFromRequest) {
         songRetriever.existsById(id);
-        Song songFromDatabase = songRetriever.findSongById(id);
+        Song songFromDatabase = songRetriever.findSongDtoById(id);
         Song toSave = new Song();
         if (songFromRequest.name() != null) {
             toSave.setName(songFromRequest.name());
@@ -74,6 +54,32 @@ public class SongCrudFacade {
         return SongDto.builder()
                 .id(toSave.getId())
                 .name(toSave.getName())
+                .build();
+
+    }
+
+    public SongDto addSong(final SongDto songDto) {
+        // some domain validator
+        String name = songDto.name();
+        Song vaidatedAndReadytoSaveSong = new Song(name);
+        // some domain validator ended checking
+        Song addedSong = songAdder.addSong(vaidatedAndReadytoSaveSong);
+        return SongDto.builder()
+                .id(addedSong.getId())
+                .name(addedSong.getName())
+                .build();
+    }
+
+    public void deleteById(Long id) {
+        songRetriever.existsById(id);
+        songDeleter.deleteById(id);
+    }
+
+    public SongDto findSongDtoById(Long id) {
+        Song song = songRetriever.findSongDtoById(id);
+        return SongDto.builder()
+                .id(song.getId())
+                .name(song.getName())
                 .build();
     }
 }
